@@ -10,17 +10,16 @@
 
 package cbit.vcell.units;
 
-import java.io.Serializable;
-import java.util.HashMap;
-
-import org.vcell.util.Matchable;
-
 import cbit.vcell.matrix.RationalExp;
 import cbit.vcell.matrix.RationalNumber;
 import cbit.vcell.parser.ExpressionException;
 import cbit.vcell.parser.ExpressionUtils;
 import cbit.vcell.parser.RationalExpUtils;
 import cbit.vcell.units.parser.UnitSymbol;
+import org.vcell.util.Matchable;
+
+import java.io.Serializable;
+import java.util.HashMap;
 
 public class VCUnitDefinition implements Matchable, Serializable{
 	
@@ -137,7 +136,7 @@ public class VCUnitDefinition implements Matchable, Serializable{
 			powerMap.put(rationalNumber, powerUnit);
 			return powerUnit;
 		}else{
-			throw new RuntimeException("raiseTo( non-integer ) not longer supported - even when solving for unknown units");
+			throw new VCUnitException("raiseTo( non-integer ) not longer supported - even when solving for unknown units");
 		}
 	}
 
@@ -215,7 +214,7 @@ public class VCUnitDefinition implements Matchable, Serializable{
 		// so have to explicitly look for such cases.
 		//
 		final VCUnitDefinition molecules_per_uM_um3 = fieldVCUnitSystem.getInstance("molecules.uM-1.um-3");
-		final RationalNumber value_molecules_per_uM_um3 = new RationalNumber(new Double(ExpressionUtils.value_molecules_per_uM_um3_NUMERATOR).longValue(),1000000);
+		final RationalNumber value_molecules_per_uM_um3 = new RationalNumber(Double.valueOf(ExpressionUtils.value_molecules_per_uM_um3_NUMERATOR).longValue(),1000000);
 		
 		//
 		// multiply and multiply by powers of KMOLE
